[tool.poetry]
name = "deck-view-tg"
version = "0.1.0"
description = ""
authors = ["h4x4d <cleanyboom@gmail.com>"]
readme = "README.md"
packages = [{include = "deck_view_tg"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
grequests = "^0.7.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
